@@ -1,8 +1,8 @@
 package ru.job4j.io;
 
 import java.io.*;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -16,7 +16,7 @@ import java.util.zip.ZipOutputStream;
  * 2. В качестве ключа передаётся расширение файлов, которые не нужно включать в архив.
  * 3. Архив должен сохранять структуру проекта. То есть содержать подпапки.
  * 4. Запуск проекта с помощью конфигурации параметров запуска:
- * java -jar pack.jar -d=c:\project\job4j_design -e=*.java -o=project.zip
+ * java -jar pack.jar -d=c:\Projects\job4j_design\ -e=.java -o=design.zip
  * где:
  * java -jar pack.jar - это собранный jar.
  * -d - directory - которую мы хотим архивировать.
@@ -29,7 +29,7 @@ import java.util.zip.ZipOutputStream;
  * 7. Для поиска и фильтрации файлов используем класс Search.
  *
  * @author Alex_life
- * @version 2.0
+ * @version 3.0
  * @since 04.08.2022
  */
 public class Zip {
@@ -48,18 +48,14 @@ public class Zip {
             e.printStackTrace();
         }
     }
-    private static void checkArgs(String[] chArg) {
-        ArgsName argsName = ArgsName.of(chArg);
-        if (chArg.length != 3) {
-            throw new IllegalArgumentException("Указаны не все аргументы для запуска");
+    private static void checkArgs(Path directory, String exclude, File output) {
+        if (!Files.isDirectory(directory)) {
+            throw new IllegalArgumentException("Указана несуществующая директория");
         }
-        if (!Path.of(argsName.get("d")).toFile().isDirectory()) {
-            throw new IllegalArgumentException("Указана некорректная директория");
-        }
-        if (!argsName.get("e").startsWith("*.")) {
+        if (!exclude.startsWith(".")) {
             throw new IllegalArgumentException("Указано некорректное расширение файла");
         }
-        if (!argsName.get("o").endsWith(".zip")) {
+        if (!output.getName().endsWith(".zip")) {
             throw new IllegalArgumentException("Указано некорректный тип файла для архивирования");
         }
 
@@ -67,10 +63,13 @@ public class Zip {
     }
 
     public static void main(String[] args) throws IOException {
-        checkArgs(args);
+        Zip zip = new Zip();
         ArgsName argsN = ArgsName.of(args);
-        List<Path> searchFiles = Search.search(Paths.get(argsN.get(args[0])),
-                path -> path.toFile().getName().endsWith(args[2]));
-        new Zip().packFiles(searchFiles, new File(argsN.get(args[2])));
+        Path directory = Path.of(argsN.get("d"));
+        String exclude = argsN.get("e");
+        File output = new File(argsN.get("o"));
+        checkArgs(directory, exclude, output);
+        List<Path> files = Search.search(directory, p -> !p.toFile().getName().endsWith(exclude));
+        zip.packFiles(files, output);
     }
 }
